# PresetCSS

./: .gitignore  Cargo.toml  README.md
crates/presetcss-cli/: Cargo.toml
crates/presetcss-cli/src/: main.rs
crates/presetcss-core/: Cargo.toml  default.toml
crates/presetcss-core/src/: emit.rs  error.rs  generate.rs  lib.rs  preset.rs  scan.rs  theme.rs
crates/presetcss-wasm/: Cargo.toml
crates/presetcss-wasm/src/: lib.rs
examples/404/: index.html  preset.toml
examples/advanced/: index.html  preset.toml
examples/blog-post/: index.html  preset.toml
examples/changelog/: index.html  preset.toml
examples/checkout/: index.html  preset.toml
examples/dark-theme/: index.html  preset.toml
examples/dashboard/: index.html  preset.toml
examples/docs/: index.html  preset.toml
examples/ecommerce/: index.html  preset.toml
examples/faq/: index.html  preset.toml
examples/gallery/: index.html  preset.toml
examples/job-board/: index.html  preset.toml
examples/landing-page/: index.html  preset.toml
examples/login/: index.html  preset.toml
examples/minimal/: index.html  preset.toml
examples/newsletter/: index.html  preset.toml
examples/notifications/: index.html  preset.toml
examples/portfolio/: index.html  preset.toml
examples/pricing/: index.html  preset.toml
examples/recipe/: index.html  preset.toml
examples/saas-metrics/: index.html  preset.toml
examples/search/: index.html  preset.toml
examples/settings/: index.html  preset.toml
examples/team/: index.html  preset.toml
playground/: index.html
