[workspace]
resolver = "2"
members = ["crates/presetcss-core", "crates/presetcss-cli", "crates/presetcss-wasm"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/BaseMax/PresetCSS"
authors = ["Seyyed Ali Mohammadiyeh (MAX BASE)"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
indexmap = { version = "2", features = ["serde"] }
aho-corasick = "1"
globset = "0.4"
walkdir = "2"
strsim = "0.11"

[profile.release]
lto = true
codegen-units = 1
strip = true
