[package]
name = "presetcss-core"
description = "PresetCSS compiler core: parse -> resolve -> generate -> emit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["scan"]
# The "scan" feature pulls in filesystem crates. Disable it for WASM targets.
scan = ["dep:globset", "dep:walkdir"]

[dependencies]
serde.workspace = true
toml.workspace = true
indexmap.workspace = true
aho-corasick.workspace = true
strsim.workspace = true
globset  = { workspace = true, optional = true }
walkdir  = { workspace = true, optional = true }
