[package]
name = "presetcss-wasm"
description = "PresetCSS WASM bindings - used by the browser playground"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
presetcss-core = { path = "../presetcss-core", default-features = false }
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
